adds CRUD impl for private films, refactors mdw chain
